[package]
name = "iso_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
mutual = "1.0.2"
anarchy = { path = "../anarchy" }
cell = { path = "../cell" }
gearbox = { path = "../gearbox" }
magician-vgpu = { path = "../shader_magician/magician-vgpu" }

chrono = "0.4.44"
futures = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
gltf = "1.4.1"
base64 = "0.22.1"
ahash = "0.8.12"
wgpu = "29.0"
anyhow = "1.0.103"
ordered-float = { version = "5.3.0", features = ["bytemuck"] }
bytemuck = { version = "1.25.1", features = ["derive"] }
ttf-parser = "0.25.1"
derive_more = "2.1.1"

[dev-dependencies]
gearbox = { path = "../gearbox" }
